#3467 - Fix firefox scrollbar

--- a/src/stylesheets/components/_main-menu.scss
+++ b/src/stylesheets/components/_main-menu.scss
@@ -2,7 +2,8 @@ nav#main-menu {
   @include flex(1);
   margin-right: 6px;
   padding: 0 4px 12px 12px;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
   &::-webkit-scrollbar {
     width: 5px;
     height: 5px;
